# flashd

./: CMakeLists.txt  README.md
gui/: CMakeLists.txt  main.c  ndex_app.c  ndex_app.h  ndex_app_win.c  ndex_app_win.h
gui/resources/: ndexapp.gresource.xml  window.ui
src/: CMakeLists.txt  flashd_app.c  flashd_app.h  flashd_app_win.c  flashd_app_win.h  main.c
src/resources/: flashdapp.gresource.xml  window.ui
